@@ -21,7 +21,7 @@ zend_extension="/usr/lib/php4/eaccelerator.so"
 
 ; The amount of shared memory (in megabytes) that eAccelerator will use.
 ; "0" means OS default. Default value is "0".
-eaccelerator.shm_size = "64"
+eaccelerator.shm_size = "0"
 
 ; The directory that is used for disk cache. eAccelerator stores precompiled
 ; code, session data, content and user entries  here. The same data can be
