@@ -1,3 +1,12 @@
+2005-11-20 Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>
+
+        * Removed executor hooks, they weren't used anyway.
+        * Check if eA has a valid cache directory.
+        * Make the init of php fail if the initialisation of the shared memory
+          or cache directory failes.
+        * set shared memory size in eaccelerator.ini to 0 so the default OS
+          size is used.
+
 2005-11-17 Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>
 
         * Fixed optimizer bug with php 5.0.5
